Fixed bug #65559 (Opcache: cache not cleared if changes occur while running)